force-app/main/default/objects/ssot__OutreachSourceCode__dlm/fields/ssot__AudienceCount__c.field-meta.xml
<CustomField>
    <fullName>ssot__AudienceCount__c</fullName>
    <label>Audience Count</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>AudienceCount</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>