force-app/main/default/objects/ssot__OutreachSourceCode__dlm/fields/ssot__OutreachSourceStatus__c.field-meta.xml
<CustomField>
    <fullName>ssot__OutreachSourceStatus__c</fullName>
    <label>Outreach Source Status</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>OutreachSourceStatus</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>