force-app/main/default/objects/ssot__OutreachSourceCode__dlm/fields/ssot__SourceCodeText__c.field-meta.xml
<CustomField>
    <fullName>ssot__SourceCodeText__c</fullName>
    <label>Source Code</label>
    <length>255</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>SourceCodeText</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>